<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TVInstallerFromSamba</string>
    <string name="scan_title">TVInstallerFromSamba</string>
    <string name="scan_running">正在搜索局域网 SMB 服务...</string>
    <string name="scan_empty">未发现 SMB 服务，请检查设备是否在同一局域网</string>
    <string name="manual_ip">手动添加 IP</string>
    <string name="refresh">刷新</string>
    <string name="clear_credentials">清除凭证</string>
    <string name="connect">连接</string>
    <string name="install">安装</string>
    <string name="back_parent">返回上级</string>
    <string name="load_more">加载更多</string>
</resources>

